Fixed overflowing search bar on narrow screens

--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,7 @@ textarea,
 select {
   font-family: inherit;
   font-size: inherit;
+  min-width: 0;
 }
 
 /* Make sure textareas without a rows attribute are not tiny */
